python/testData/inspections/PyUnresolvedReferencesInspection/importFunction.py
import collections.<error descr="No module named 'OrderedDict'">OrderedDict</error>

collections.OrderedDict()
